<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:layout_gravity="center"
    tools:context=".HomeFrag">
    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_image"
        app:layout_constraintDimensionRatio="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quizTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/quiz"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIV" />

    <TextView
        android:id="@+id/htitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/rundschriftpro"
        android:text="@string/highscore"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizTitle" />


    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rundschriftpro"
        android:text="@string/_00_point"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/htitleTV" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBtn"
        android:layout_width="0dp"
        app:rippleColor="@color/greyA1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_bold"
        android:padding="@dimen/_15sdp"
        android:text="@string/start"
        android:textColor="@color/greyA1"
        android:textSize="@dimen/_13sdp"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="@id/endGL"
        app:layout_constraintStart_toStartOf="@+id/startGL"
        app:layout_constraintTop_toBottomOf="@+id/scoreTV" />


</androidx.constraintlayout.widget.ConstraintLayout>